# Linux

Line Tracer/: linetracer.py  motor.py
Losey's cafe simple kiosk/: README.md
Losey's cafe simple kiosk/Losey_cafe/dev/: CMakeLists.txt
Losey's cafe simple kiosk/Losey_cafe/dev/inc/: Client.h  Manager.h  common.h
Losey's cafe simple kiosk/Losey_cafe/dev/src/: Client.cpp  Manager.cpp
동아리 신청확인/: README.md  동아리 확인 홈페이지 만들기.pptx
동아리 신청확인/IoT_Club/: app.py  dbModule.py  db_select.py  iot_club.csv  setting.sql
동아리 신청확인/IoT_Club/templates/: index.html
